--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <nav id="desktop-nav">
-      <div class="logo">John Doe</div>
+      <div class="logo">Kagiso Ramuntsha</div>
       <div>
         <ul class="nav-links">
           <li><a href="#about">About</a></li>
@@ -21,7 +21,7 @@
       </div>
     </nav>
     <nav id="hamburger-nav">
-      <div class="logo">John Doe</div>
+      <div class="logo">Kagiso Ramuntsha</div>
       <div class="hamburger-menu">
         <div class="hamburger-icon" onclick="toggleMenu()">
           <span></span>
@@ -42,7 +42,7 @@
       </div>
       <div class="section__text">
         <p class="section__text__p1">Hello, I'm</p>
-        <h1 class="title">John Doe</h1>
+        <h1 class="title">Kagiso Ramuntsha</h1>
         <p class="section__text__p2">Frontend Developer</p>
         <div class="btn-container">
           <button
@@ -77,7 +77,7 @@
       <div class="section-container">
         <div class="section__pic-container">
           <img
-            src="./assets/about-pic.png"
+            src="./assets/about-pic.jpeg"
             alt="Profile picture"
             class="about-pic"
           />
@@ -100,17 +100,12 @@
                 class="icon"
               />
               <h3>Education</h3>
-              <p>B.Sc. Bachelors Degree<br />M.Sc. Masters Degree</p>
+              <p>University of Limpopo<br />Computer Science</p>
             </div>
           </div>
           <div class="text-container">
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic quis
-              reprehenderit et laborum, rem, dolore eum quod voluptate
-              exercitationem nobis, nihil esse debitis maxime facere minus sint
-              delectus velit in eos quo officiis explicabo deleniti dignissimos.
-              Eligendi illum libero dolorum cum laboriosam corrupti quidem,
-              reiciendis ea magnam? Nulla, impedit fuga!
+              I'm a passionate software developer with a strong background in building efficient, scalable applications. With expertise in languages like JavaScript, Python, and C++, I specialize in creating solutions that meet user needs while focusing on performance and usability. I enjoy problem-solving, learning new technologies, and collaborating with teams to bring innovative ideas to life. Whether it's developing a web application, improving user interfaces, or optimizing backend systems, I’m always eager to tackle new challenges and contribute to meaningful projects.
             </p>
           </div>
         </div>
@@ -138,7 +133,7 @@
                 />
                 <div>
                   <h3>HTML</h3>
-                  <p>Experienced</p>
+                  <p>Beginner</p>
                 </div>
               </article>
               <article>
@@ -149,7 +144,7 @@
                 />
                 <div>
                   <h3>CSS</h3>
-                  <p>Experienced</p>
+                  <p>Beginner</p>
                 </div>
               </article>
               <article>
@@ -160,7 +155,7 @@
                 />
                 <div>
                   <h3>SASS</h3>
-                  <p>Intermediate</p>
+                  <p>Beginner</p>
                 </div>
               </article>
               <article>
@@ -193,7 +188,7 @@
                 />
                 <div>
                   <h3>Material UI</h3>
-                  <p>Intermediate</p>
+                  <p>Beginner</p>
                 </div>
               </article>
             </div>
@@ -220,7 +215,7 @@
                 />
                 <div>
                   <h3>Node JS</h3>
-                  <p>Intermediate</p>
+                  <p>Basic</p>
                 </div>
               </article>
               <article>
@@ -231,7 +226,7 @@
                 />
                 <div>
                   <h3>Express JS</h3>
-                  <p>Intermediate</p>
+                  <p>Basic</p>
                 </div>
               </article>
               <article>
@@ -352,7 +347,7 @@
             alt="Email icon"
             class="icon contact-icon email-icon"
           />
-          <p><a href="mailto:examplemail@gmail.com">Example@gmail.com</a></p>
+          <p><a href="mailto:examplemail@gmail.com">kagiso@gmail.com</a></p>
         </div>
         <div class="contact-info-container">
           <img
@@ -375,7 +370,7 @@
           </ul>
         </div>
       </nav>
-      <p>Copyright &#169; 2023 John Doe. All Rights Reserved.</p>
+      <p>Copyright &#169; 2024 Kagiso Ramuntsha. All Rights Reserved.</p>
     </footer>
     <script src="script.js"></script>
   </body>
