--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <nav id="desktop-nav">
-      <div class="logo">Kagiso Ramuntsha</div>
+      <div class="logo">Kagiso Ramuntsa</div>
       <div>
         <ul class="nav-links">
           <li><a href="#about">About</a></li>
@@ -21,7 +21,7 @@
       </div>
     </nav>
     <nav id="hamburger-nav">
-      <div class="logo">Kagiso Ramuntsha</div>
+      <div class="logo">Kagiso Ramuntsa</div>
       <div class="hamburger-menu">
         <div class="hamburger-icon" onclick="toggleMenu()">
           <span></span>
@@ -42,7 +42,7 @@
       </div>
       <div class="section__text">
         <p class="section__text__p1">Hello, I'm</p>
-        <h1 class="title">Kagiso Ramuntsha</h1>
+        <h1 class="title">Kagiso Ramuntsa</h1>
         <p class="section__text__p2">Frontend Developer</p>
         <div class="btn-container">
           <button
@@ -388,7 +388,7 @@
           </ul>
         </div>
       </nav>
-      <p>Copyright &#169; 2024 Kagiso Ramuntsha. All Rights Reserved.</p>
+      <p>Copyright &#169; 2024 Kagiso Ramuntsa. All Rights Reserved.</p>
     </footer>
     <script src="script.js"></script>
   </body>
